--- a/platforms/android/assets/www/settings.html
+++ b/platforms/android/assets/www/settings.html
@@ -6,7 +6,12 @@
         </div>
     </div>
     <div class="page-content">
-
+        <p id="registered">
+            <button onclick="desync();">Désynchroniser le compte</button>
+        </p>
+        <p id="unregistered">
+            <button onclick="register();">Activation</button>
+        </p>
     </div>
     <script type="text/javascript">
     </script>
