--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,7 @@
         </ul>
     </div>
 </div>
+<a onclick="notification()" hidden="true" id="buttonNotification">Push</a>
 <!-- Views-->
 <div class="views">
     <!-- Your main view, should have "view-main" class-->
