--- a/www/settings.html
+++ b/www/settings.html
@@ -9,10 +9,10 @@
     <div class="page-content">
         <div class="content-block">
             <p id="registered" hidden>
-                <a onclick="desync();" class="button button-fill color-red">Désynchroniser le compte</a>
+                <a onclick="desync();" class="button button-fill button-raised color-red">Désynchroniser le compte</a>
             </p>
             <p id="unregistered" hidden>
-                <a onclick="register();" class="button button-fill color-green">Activation</a>
+                <a onclick="register();" class="button button-fill button-raised color-green">Activation</a>
             </p>
         </div>
     </div>
