--- a/www/home.html
+++ b/www/home.html
@@ -20,7 +20,7 @@
                 <br> Cliquez ensuite sur le bouton "Activation" d'Esup-OTP-Push et entrez votre identifiant ainsi que le
                 code affiché. Un message vous confirmera l'activation de ce service.
                 <br>
-            <p><a onclick="register();" class="button button-fill button-raised color-green">Activation</a></p>
+                <p id="unregistered" hidden><a onclick="register();" class="button button-fill button-raised color-green">Activation</a></p>
             </p>
         </div>
     </div>
