--- a/platforms/browser/www/settings.html
+++ b/platforms/browser/www/settings.html
@@ -8,11 +8,11 @@
     </div>
     <div class="page-content">
         <div class="content-block">
-            <p id="registered">
-                <a onclick="desync();" class="button button-fill color-red">Désynchroniser le compte</a>
+            <p id="registered" hidden>
+                <a onclick="desync();" class="button button-fill button-raised color-red">Désynchroniser le compte</a>
             </p>
-            <p id="unregistered">
-                <a onclick="register();" class="button button-fill color-green">Activation</a>
+            <p class="unregistered" hidden>
+                <a onclick="register();" class="button button-fill button-raised color-green">Activation</a>
             </p>
         </div>
     </div>
