--- a/www/home.html
+++ b/www/home.html
@@ -10,18 +10,9 @@
         <div class="content-block">
             <p>Bienvenue dans l'application Esup-OTP-Push</p>
             <p>Cette application vous permet de vous connecter de manière sécurisée grâce à votre smartphone</p>
-            <p id="welcome" hidden="true" class="notice">Connectez-vous sur un service nécessitant une authentification sécurisée.
-                <br>Si vous sélectionnez la méthode "Notification Android" vous recevrez une notification ainsi qu'une
-                demande de connexion. Acceptez cette demande. Vous êtes connecté.
-            </p>
-            <p id="register" hidden="true" class="notice">Afin de pouvoir utiliser ce service modifiez vos préférences et activez la
-                méthode "Notification sur smartphone" dans l'application Esup-OTP-Manager, un code d'activation vous est
-                alors affiché.
-                <br> Cliquez ensuite sur le bouton "Activation" d'Esup-OTP-Push et entrez votre identifiant ainsi que le
-                code affiché. Un message vous confirmera l'activation de ce service.
-                <br>
-                <p id="unregistered" hidden><a onclick="register();" class="button button-fill button-raised color-green">Activation</a></p>
-            </p>
+            <div id="notice">
+
+            </div>
         </div>
     </div>
     <script type="text/javascript">
