http or https management

--- a/platforms/browser/www/settings.html
+++ b/platforms/browser/www/settings.html
@@ -8,12 +8,9 @@
     </div>
     <div class="page-content">
         <div class="content-block">
-            <p id="registered" hidden>
-                <a onclick="desync();" class="button button-fill button-raised color-red">Désynchroniser le compte</a>
-            </p>
-            <p class="unregistered" hidden>
-                <a onclick="register();" class="button button-fill button-raised color-green">Activation</a>
-            </p>
+            <div id="activation_settings">
+
+            </div>
         </div>
     </div>
     <script type="text/javascript">
