--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 
@@ -205,14 +203,20 @@
                                     <tbody id= "result"></tbody>
                                 </table></td>
                             <td>
-                                <div style="display: flex; justify-content: flex-end;float:right">
-                                    <svg class="countdownTimer"  width="100" height="100" xmlns="http://www.w3.org/2000/svg">
-                                        <g >
-                                            <circle  id="circle" class="circle_animation" r="14" cx="51" cy="41"  stroke-width="28" stroke="#0288d1" fill="none" />
-                                            <circle id="circle2" class="circle" cx="51" cy="41" r="27" stroke-width="1" style="display:none" fill="none" stroke="grey" /><span ng-init="timer();RequestSend();"  id="countdowntimer" class="timeNumber"></span>
-                                        </g>
+<!--                                <div style="display: flex; justify-content: flex-end;float:right">-->
+<!--                                    <svg class="countdownTimer"  width="100" height="100" xmlns="http://www.w3.org/2000/svg">-->
+<!--                                        <g >-->
+<!--                                            <circle id="circle" class="circle_animation" r="14" cx="51" cy="41"  stroke-width="28" stroke="#0288d1" fill="none" />-->
+<!--                                            <circle id="circle2" class="circle" cx="51" cy="41" r="28" stroke-width="1" style="display:none" fill="none" stroke="grey" /><span ng-init="timer();RequestSend();"  id="countdowntimer" class="timeNumber"></span>-->
+<!--                                        </g>-->
+<!--                                    </svg>-->
+<!--                                </div>-->
+                                <div class="timer">
+                                    <svg >
+                                        <circle id="circle2" cx="50" cy="50" r="14" stroke-width="28"></circle>
                                     </svg>
                                 </div>
+
                             </td>
                         </tr>
                     </table>
@@ -270,7 +274,6 @@
 
 <script>
 function addT(){
-//startTimer();
 var totpObjects = localStorage.getItem('totpObjects');
   if (totpObjects  == "{}")
  {
@@ -324,28 +327,32 @@ async function populateTable()
 document.getElementById("result").innerHTML = table;
   }
 
+
 populateTable();
-startTimer();
+//function startTimer(){
+jQuery.noConflict();
+
+const circle2 = document.getElementById('circle2');
+const length = 87.39775848388672;
+circle2.style.strokeDasharray = length;
+circle2.style.strokeDashoffset = length;
+let count = 0;
+let time = 30;
 
 function startTimer(){
- jQuery.noConflict();
-    var size = Object.keys(getTotpObjects()).length;
-  if (size > 0) {
-  jQuery('.circle_animation').css({'stroke-dashoffset':220 });
-    var initialOffset = 0;
-    var x = document.getElementById("circle2");
-    if (x.style.display === "none") {
-        x.style.display = "block";
-        }
-         /*else {
-    x.style.display = "none";
-  }*/
-    jQuery('.circle_animation').animate({'stroke-dashoffset': initialOffset },30000, 'swing', function() {
-                                                                                                          startTimer();
-                                                                                                          populateTable();
-                                                                                                          });
-                                    }
+  timer = setInterval(function(){
+
+
+    circle2.style.strokeDashoffset = length - (count / time) * length;
+    if (count % time === 0) {
+      populateTable();
+    }
+    count++;
+  },1000);
 }
+startTimer();
+
+
 function deleteTotp(key){
 var result = confirm("voulez-vous vraiment supprimer?");
 if (result) {
