--- a/www/index.html
+++ b/www/index.html
@@ -203,14 +203,6 @@
                                     <tbody id= "result"></tbody>
                                 </table></td>
                             <td>
-<!--                                <div style="display: flex; justify-content: flex-end;float:right">-->
-<!--                                    <svg class="countdownTimer"  width="100" height="100" xmlns="http://www.w3.org/2000/svg">-->
-<!--                                        <g >-->
-<!--                                            <circle id="circle" class="circle_animation" r="14" cx="51" cy="41"  stroke-width="28" stroke="#0288d1" fill="none" />-->
-<!--                                            <circle id="circle2" class="circle" cx="51" cy="41" r="28" stroke-width="1" style="display:none" fill="none" stroke="grey" /><span ng-init="timer();RequestSend();"  id="countdowntimer" class="timeNumber"></span>-->
-<!--                                        </g>-->
-<!--                                    </svg>-->
-<!--                                </div>-->
                                 <div class="timer">
                                     <svg >
                                         <circle id="circle2" cx="50" cy="50" r="14" stroke-width="28"></circle>
@@ -221,8 +213,6 @@
                         </tr>
                     </table>
                 </div>
-
-
             </div>
         </div>
         <div class="container" v-show="currentView=='totpAddAccount'">
@@ -283,7 +273,6 @@ var totpObjects = localStorage.getItem('totpObjects');
 {
  document.getElementById("circleTimer").style.display = 'inline';
 }
-//alert("afterdeletedADDT"+ JSON.stringify(localStorage.getItem('totpObjects')));
 
   var $ = jQuery.noConflict();
     $ = function(sel) {
@@ -337,18 +326,18 @@ const length = 87.39775848388672;
 circle2.style.strokeDasharray = length;
 circle2.style.strokeDashoffset = length;
 let count = 0;
-let time = 30;
+let time = 30000;
 
 function startTimer(){
   timer = setInterval(function(){
-
-
-    circle2.style.strokeDashoffset = length - (count / time) * length;
-    if (count % time === 0) {
+    var epoch = new Date().getTime();
+    var new_count = (epoch /*+ 1000*/ ) % time ;
+    circle2.style.strokeDashoffset = length - (new_count / time) * length;
+    if (new_count < count) {
       populateTable();
     }
-    count++;
-  },1000);
+    count = new_count
+  },100);
 }
 startTimer();
 
@@ -379,7 +368,6 @@ return totpObjects;
 }
 
 function addAccount(){
-   // localStorage.removeItem('totpObjects');
   document.getElementById("circleTimer").style.display = 'inline';
 var totpObjects = getTotpObjects();
 var name = document.getElementById("account2").value;
@@ -389,9 +377,6 @@ if (key.length >=16 && (key.length % 2 === 0))
   {
    totpObjects[key]=name;
    localStorage.setItem('totpObjects',JSON.stringify(totpObjects));
-
-
-  //  alert("tab"+ JSON.stringify(localStorage.getItem('totpObjects')));
   }
 else
   {
