feat(js): totp timer doesn't show when no totp is in the table

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="cordova.js"></script>
-
 </head>
 
 <body>
@@ -64,7 +63,7 @@
             </li>
             <div class="divider"></div>
             <li class="bold" v-if="uid">
-                <a href="#" v-on:click="desync" class="flex">Désactivation<i class="material-icons">remove_circle</i>
+                <a href="#" v-on:click="desync" class="flex">Désactivation Push<i class="material-icons">remove_circle</i>
                 </a>
             </li>
         </ul>
