--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="cordova.js"></script>
 </head>
-
 <body>
 
 <script type="text/x-template" id="parametres-template">
@@ -33,7 +32,7 @@
     <header>
         <nav class="top-nav">
             <div class="container">
-                <a href="#" data-activates="slide-out" class="button-collapse top-nav full hide-on-large-only" id="navButton">
+                <a href="#" v-on:click="checkTotp" data-activates="slide-out" class="button-collapse top-nav full hide-on-large-only" id="navButton">
                     <i class="material-icons">menu</i>
                 </a>
                 <div class="nav-wrapper">
@@ -41,8 +40,8 @@
                 </div>
             </div>
         </nav>
-        <ul id="slide-out" class="side-nav fixed">
-            <div class="no-padding sidenav-header">
+        <ul id="slide-out" class="side-nav fixed" >
+            <div class="no-padding sidenav-header" >
                 <div class="flex1">
                     <img src="img/logo.png" style="max-width:100px;text-align:center" alt="" v-if="!uid" >
                     <i class="material-icons medium" v-if="uid">account_circle</i>
@@ -58,8 +57,8 @@
             <li class="bold" v-if="!uid">
                 <a href="#" v-on:click="navigate" id="scanless" name="scanless" class="flex"><img src="img/edit.png" style="float:right" alt="">&emsp;Activation</a>
             </li>
-            <li class="bold">
-                <a href="#" v-on:click="navigate"  id="totp" name="totp" class="flex"><img src="img/totp2.png" style="float:right" alt="">&emsp;TOTP </a>
+            <li class="bold" v-if="totpnb == 0">
+                <a href="#" v-on:click="navigate" id="totp" name="totp" class="flex"><img src="img/totp2.png" style="float:right" alt="">&emsp;TOTP </a>
             </li>
             <div class="divider"></div>
             <li class="bold" v-if="uid">
@@ -78,38 +77,67 @@
                 manufacturer : {{manufacturer}}
                 push : {{push}}
             </p>
-            <div class="card" v-if="!uid">
-                <div class="card-content" style="padding-bottom: 0;padding-top: 7px;">
-                    <div class="row" style="margin-bottom: 0;">
-                        <h5>Comment ça marche ?</h5>
-                    </div>
-                </div>
-                <div class="card-action" style="padding-bottom: 0;padding-top: 0;">
-                    <div class="row" style="margin-bottom: 0;">
-                        <ul class="collection">
-                            <li class="collection-item avatar">
-                                <img src="img/one.png" alt="" class="circle">
-                                <p>Modifiez vos préférences et activez la méthode "Notification sur smartphone" dans l'application Esup-OTP-Manager, un code d'activation vous est alors affiché.</p>
-                            </li>
-                            <li class="collection-item avatar">
-                                <img src="img/two.png" alt="" class="circle">
-                                <p>Sélectionnez l'option 'Activer' du menu latéral et scannez le code affiché. Un message vous confirmera l'activation de ce service.</p>
-                            </li>
-                        </ul>
-                        <ul class="collection">
-                            <li class="collection-item avatar">
-                                <img src="img/two_blue.png" alt="" class="circle">
-                                <p>Vous pouvez également activer ce service sans scan grâce à l'option 'Activer' du menu latéral</p>
-                            </li>
-                        </ul>
+            <div class="container" v-if="totpnb != 0 && !notified">
+                <br/>
+                <table >
+                    <tr>
+                        <td>
+                            <div class="list-group">
+                                <a href="#" class="fa fa-plus-circle fa-4x" v-on:click="navigate" id="screenChoiceAddAccount" name="screenChoiceAddAccount"></a>
+                            </div>
+                        </td>
+                        <td style="text-align: right">
+                            <svg style="width: 57px;height: 57px">
+                                <circle id="circle2" cx="28" cy="28" r="14" stroke-width="28" ></circle>
+                            </svg>
+                        </td>
+                    </tr>
+                </table>
+                <br/>
+                <div id="circleTimer2">
+                    <div class="col-md-8">
+                        <tr>
+                            <table class="table table-bordered">
+                                <thead class="alert-info">
+                                </thead>
+                                <tbody id= "result"></tbody>
+                            </table></td>
+                        </tr>
                     </div>
                 </div>
             </div>
             <div v-else>
-                <div class="card" v-if="!notified">
-                    <div class="card-content" style="padding-bottom: 0;padding-top: 7px;">
-                        <div class="row" style="margin-bottom: 0;">
-                            <h5>Se connecter</h5>
+            <div class="card" v-if="!uid && totpnb == 0 && !notified" >
+            <div class="card-content" style="padding-bottom: 0;padding-top: 7px;">
+                <div class="row" style="margin-bottom: 0;">
+                    <h5>Comment ça marche ?</h5>
+                </div>
+            </div>
+            <div class="card-action" style="padding-bottom: 0;padding-top: 0;">
+                <div class="row" style="margin-bottom: 0;">
+                    <ul class="collection">
+                        <li class="collection-item avatar">
+                            <img src="img/one.png" alt="" class="circle">
+                            <p>Modifiez vos préférences et activez la méthode "Notification sur smartphone" dans l'application Esup-OTP-Manager, un code d'activation vous est alors affiché.</p>
+                        </li>
+                        <li class="collection-item avatar">
+                            <img src="img/two.png" alt="" class="circle">
+                            <p>Sélectionnez l'option 'Activer' du menu latéral et scannez le code affiché. Un message vous confirmera l'activation de ce service.</p>
+                        </li>
+                    </ul>
+                    <ul class="collection">
+                        <li class="collection-item avatar">
+                            <img src="img/two_blue.png" alt="" class="circle">
+                            <p>Vous pouvez également activer ce service sans scan grâce à l'option 'Activer' du menu latéral</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+            <div class="card" v-if="!notified && totpnb == 0 && uid != {} && uid != undefined">
+                <div class="card-content" style="padding-bottom: 0;padding-top: 7px;">
+                    <div class="row" style="margin-bottom: 0;">
+                         <h5>Se connecter</h5>
                         </div>
                     </div>
                     <div class="card-action" style="padding-bottom: 0;padding-top: 0;">
@@ -139,8 +167,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card" v-else>
-                    <div class="card-content">
+            <div class="card" v-if="notified">
+                    <div class="card-content" >
                         <div class="row" style="margin-bottom: 0;">
                             <h5>{{additionalData.text}}</h5>
                         </div>
@@ -193,7 +221,7 @@
                     </td>
                     <td style="text-align: right">
                         <svg style="width: 57px;height: 57px">
-                            <circle id="circle2" cx="28" cy="28" r="14" stroke-width="28" ></circle>
+                            <circle id="circle1" cx="28" cy="28" r="14" stroke-width="28" ></circle>
                         </svg>
                     </td>
                 </tr>
@@ -205,7 +233,7 @@
                         <table class="table table-bordered">
                             <thead class="alert-info">
                             </thead>
-                            <tbody id= "result"></tbody>
+                            <tbody id= "result2"></tbody>
                         </table></td>
                     </tr>
                 </div>
@@ -239,7 +267,7 @@
                 </li>
                 <br/>
                 <li class="collection-item avatar">
-                    <a href="#" class="fa fa-camera fa-lg" onclick="totp_scan(document.getElementById('slide-out'))"> Scan</a>
+                    <a href="#" class="fa fa-camera fa-lg" onclick="totp_scan(document.getElementById('slide-out'))">Scan</a>
                 </li>
             </ul>
         </div>
